dataset1235/2025-2/2868285114/users/3019393479/executions/3792430146_254684124.log
== RUN (2025-09-02 22:25:41)
-- CODE: 
idade = int(input())
print(idade)
if idade >= 18:
print(Maior_de_idade)
  
else:
idade < 18
print(Menor_de_idade)

print(Fim)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:28:00)
-- CODE: 
idade = int(input())
print(idade)
if idade >= 18:
  print("Maior_de_idade")
else:
  print("Menor_de_idade")

  

-- EXECUTION TIME: 
0.0166667
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
---- user output:
Menor_de_idade
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
---- user output:
Maior_de_idade
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
---- user output:
Maior_de_idade
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:25:28)
-- CODE: 
idade = int(input())
print(idade)
if  idade >= 18 :
print(Maior_de_idade)
  
else:
idade < 18
print(Menor_de_idade)

print(Fim)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:26:55)
-- CODE: 
idade = int(input())
print(idade)
if idade >= 18:
print(Maior_de_idade)
else:
print(Menor_de_idade)

print(Fim)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 22:26:16)
-- CODE: 
idade = int(input())
print(idade)
if idade >= 18:
print(Maior_de_idade)
else:
print(Menor_de_idade)

print(Fim)
  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
File "XXXX", line 4
    print(Maior_de_idade)
    ^
IndentationError: expected an indented block after 'if' statement on line 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 22:27:24)
-- CODE: 
idade = int(input())
print(idade)
if idade >= 18:
  print(Maior_de_idade)
else:
  print(Menor_de_idade)

  

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
28
---- correct output:
28
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Maior_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Maior_de_idade' is not defined
-- TEST CASE 2:
---- input:
17
---- correct output:
17
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 3:
---- input:
10
---- correct output:
10
Menor_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(Menor_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Menor_de_idade' is not defined
-- TEST CASE 4:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Maior_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Maior_de_idade' is not defined
-- TEST CASE 5:
---- input:
22
---- correct output:
22
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Maior_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Maior_de_idade' is not defined
-- TEST CASE 6:
---- input:
18
---- correct output:
18
Maior_de_idade
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(Maior_de_idade)
          ^^^^^^^^^^^^^^
NameError: name 'Maior_de_idade' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
